--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog NodeJS</title>
 </head>
+
 <body>
-    {{{ body }}}
-    
+
+    <div class="container mt-4">
+        {{{ body }}}
+    </div>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" "></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 </html>
