--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -13,7 +13,7 @@
     <small>{{date}}</small><br>
     <div class="btn-group">
       
-            <a href="/admin/categorias/edit/{{_id}}">
+            <a href="/admin/categoria/edit/{{_id}}">
                 <button class="btn btn-success btn-sm ">Editar categoria</button>
             </a>
     </div> 
