--- a/views/admin/editcategoria.handlebars
+++ b/views/admin/editcategoria.handlebars
@@ -1,7 +1,7 @@
 <h3>Editar categoria: </h3>
 <div class="card">
   <div class="card-body">
-    <form action="/admin/categorias/edit" method="post">
+    <form action="/admin/categoria/edit" method="post">
         <div class="mb-3">
             <label for="nome">Nome</label>
             <input type="text" class="form-control" name="nome" value="{{categorias.nome}}" placeholder="Nome da Categoria">
