--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog NodeJS</title>
+
+    
 </head>
-
 <body>
-
+    {{>_navbar}}
     <div class="container mt-4">
+        {{#if error}}
+                    <div class="alert alert-danger"> {{error}} </div>
+        {{else}}
+
+        {{/if}}
+        
         {{{ body }}}
+ 
     </div>
+
+  
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
